# articulus

./: .dockerignore  .editorconfig  .env.docker  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  package.json  pyproject.toml  tailwind.config.js
app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0002_rename_word_column_article_word_count.py  0003_article_creator_alter_article_status_and_more.py  0004_alter_userprofile_managers_alter_userprofile_email.py
articulus/: asgi.py  settings.py  urls.py  wsgi.py
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: form.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app/layouts/: base_form.html
templates/registration/: login.html
