[project]
name = "articulus"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Dass",email = "65924137+ben-dass@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "django>=5.1.4",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-debug-toolbar (>=6.0.0,<7.0.0)"
]
