[project]
name = "articulus"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Dass",email = "65924137+ben-dass@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "django>=5.1.4",
    "django-allauth[socialaccount] (>=65.12.1,<66.0.0)",
    "psycopg (>=3.2.11,<4.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-debug-toolbar (>=6.0.0,<7.0.0)"
]
